--- a/src/main/resources/templates/evenement/evenementCadreRucheListe.html
+++ b/src/main/resources/templates/evenement/evenementCadreRucheListe.html
@@ -1,18 +1,20 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:replace="include :: moment"></script>
-<script th:replace="include :: jquerydaterangepicker"></script>
-<link th:replace="include :: cssjquerydaterangepicker"/>
-<script th:src="@{/js/ruches/evenementListe.js}"></script>
-<script th:inline="javascript">
-	const Evenements = /*[[#{evenementcadreruche}]]*/ null;
-	const buttontextprint = /*[[#{buttontextprint}]]*/null;
-	const buttontextcol = /*[[#{buttontextcol}]]*/null;
-	document.addEventListener('DOMContentLoaded', () => evenementListe(true));
+	<script th:replace="include :: moment"></script>
+	<script th:replace="include :: jquerydaterangepicker"></script>
+	<link th:replace="include :: cssjquerydaterangepicker" />
+	<script th:replace="include :: jsruchesnom('evenementListe')"></script>
+	<script th:inline="javascript">
+		const Evenements = /*[[#{evenementcadreruche}]]*/ null;
+		const buttontextprint = /*[[#{buttontextprint}]]*/null;
+		const buttontextcol = /*[[#{buttontextcol}]]*/null;
+		document.addEventListener('DOMContentLoaded', () => evenementListe(true));
 	});
-</script>
+	</script>
 </head>
+
 <body>
 	<nav th:replace="navbar::navbar">Menu</nav>
 	<br />
@@ -23,7 +25,8 @@
 			<div class="col">
 				<h1 class="item" th:text="#{evenementcadreruche}"></h1>
 			</div>
-			<div th:insert="includeForm :: evenementListeDates(retController='/evenement/ruche/listeCadreRuche')" class="col">
+			<div th:insert="includeForm :: evenementListeDates(retController='/evenement/ruche/listeCadreRuche')"
+				class="col">
 			</div>
 		</div>
 	</div>
@@ -50,10 +53,11 @@
 					<td th:text="${evenement.rucher?.nom}"></td>
 					<td class="num" th:text="${#numbers.formatDecimal(evenement.valeur,1,2,'COMMA')}"></td>
 					<td th:text="${evenement.commentaire}"></td>
-				</tr>				
+				</tr>
 			</tbody>
 		</table>
 	</div>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
