--- a/src/main/resources/templates/evenement/evenementListe.html
+++ b/src/main/resources/templates/evenement/evenementListe.html
@@ -1,17 +1,19 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:replace="include :: moment"></script>
-<script th:replace="include :: jquerydaterangepicker"></script>
-<link th:replace="include :: cssjquerydaterangepicker"/>
-<script th:src="@{/js/ruches/evenementListe.js}"></script>
-<script th:inline="javascript">
-	const Evenements = /*[[#{evenements}]]*/ null;
-	const buttontextprint = /*[[#{buttontextprint}]]*/ null;
-	const buttontextcol = /*[[#{buttontextcol}]]*/ null;
-	document.addEventListener('DOMContentLoaded', () => evenementListe(true));
-</script>
+	<script th:replace="include :: moment"></script>
+	<script th:replace="include :: jquerydaterangepicker"></script>
+	<link th:replace="include :: cssjquerydaterangepicker" />
+	<script th:replace="include :: jsruches"></script>
+	<script th:inline="javascript">
+		const Evenements = /*[[#{evenements}]]*/ null;
+		const buttontextprint = /*[[#{buttontextprint}]]*/ null;
+		const buttontextcol = /*[[#{buttontextcol}]]*/ null;
+		document.addEventListener('DOMContentLoaded', () => evenementListe(true));
+	</script>
 </head>
+
 <body>
 	<nav th:replace="navbar::navbar">Menu</nav>
 	<br />
@@ -22,26 +24,21 @@
 			<div class="col">
 				<h1 class="item">
 					<th:block th:text="#{evenements}+ ' '"></th:block>
-					<a th:if="${rucheId}"
-						th:href="@{'/ruche/'+${rucheId}}"
-						th:text="#{ruche} + ' ' + ${rucheNom}"></a>
-					<a th:if="${rucherId}"
-						th:href="@{'/rucher/'+${rucherId}}"
+					<a th:if="${rucheId}" th:href="@{'/ruche/'+${rucheId}}" th:text="#{ruche} + ' ' + ${rucheNom}"></a>
+					<a th:if="${rucherId}" th:href="@{'/rucher/'+${rucherId}}"
 						th:text="#{rucher} + ' ' + ${rucherNom}"></a>
-					<a th:if="${essaimId}"
-						th:href="@{'/essaim/'+${essaimId}}"
+					<a th:if="${essaimId}" th:href="@{'/essaim/'+${essaimId}}"
 						th:text="#{essaim} + ' ' + ${essaimNom}"></a>
-					<a th:if="${hausseId}"
-						th:href="@{'/hausse/'+${hausseId}}"
+					<a th:if="${hausseId}" th:href="@{'/hausse/'+${hausseId}}"
 						th:text="#{hausse} + ' ' + ${hausseNom}"></a>
-				</h1>			
+				</h1>
 			</div>
 			<th:block th:unless="${rucheId} or ${rucherId} or ${essaimId} or ${hausseId}">
-				<div class="col" >
-					<a id="cree" th:href="@{/evenement/cree}"
-					  class="bi-plus-lg" th:title="#{evenementCree}" aria-hidden="true"></a>
-   					<a th:href="@{#{urldoc}+'1110_1613789997'}"
-				  		class="bi-book" th:title="#{Doc}" target="_blank" aria-hidden="true"></a>
+				<div class="col">
+					<a id="cree" th:href="@{/evenement/cree}" class="bi-plus-lg" th:title="#{evenementCree}"
+						aria-hidden="true"></a>
+					<a th:href="@{#{urldoc}+'1110_1613789997'}" class="bi-book" th:title="#{Doc}" target="_blank"
+						aria-hidden="true"></a>
 				</div>
 				<div th:insert="includeForm :: evenementListeDates(retController='/evenement/liste')" class="col">
 				</div>
@@ -65,10 +62,8 @@
 			<tbody>
 				<tr th:each="evenement : ${evenements}">
 					<td>
-						<a th:text="${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"
-							th:with="url='/evenement/'+${evenement.id}+
-								(${type}?('?type='+${type}):'')"
-							th:href="@{${url}}"></a>		
+						<a th:text="${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}" th:with="url='/evenement/'+${evenement.id}+
+								(${type}?('?type='+${type}):'')" th:href="@{${url}}"></a>
 					</td>
 					<td th:text="#{${evenement.type}}"></td>
 					<td th:unless="${rucheId}" th:text="${evenement.ruche?.nom}"></td>
@@ -76,9 +71,11 @@
 					<td th:unless="${rucherId}" th:text="${evenement.rucher?.nom}"></td>
 					<td th:unless="${hausseId}" th:text="${evenement.hausse?.nom}"></td>
 					<th:block th:switch="${evenement.type}">
-						<td class="num" th:case="${T(ooioo.ruches.evenement.TypeEvenement).ESSAIMSUCRE}" th:text="${#numbers.formatDecimal(evenement.valeur,1,2,'COMMA')}"></td>
-						<td class="num" th:case="${T(ooioo.ruches.evenement.TypeEvenement).RUCHEPESEE}"  th:text="${#numbers.formatDecimal(evenement.valeur,1,2,'COMMA')}"></td>
-						<td class="num" th:case="*" th:text="${evenement.valeur}"></td>						
+						<td class="num" th:case="${T(ooioo.ruches.evenement.TypeEvenement).ESSAIMSUCRE}"
+							th:text="${#numbers.formatDecimal(evenement.valeur,1,2,'COMMA')}"></td>
+						<td class="num" th:case="${T(ooioo.ruches.evenement.TypeEvenement).RUCHEPESEE}"
+							th:text="${#numbers.formatDecimal(evenement.valeur,1,2,'COMMA')}"></td>
+						<td class="num" th:case="*" th:text="${evenement.valeur}"></td>
 					</th:block>
 					<td th:text="${evenement.commentaire}"></td>
 				</tr>
@@ -87,4 +84,5 @@
 	</div>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
