--- a/src/main/resources/templates/evenement/evenementRemplissageHausseListe.html
+++ b/src/main/resources/templates/evenement/evenementRemplissageHausseListe.html
@@ -1,17 +1,19 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:replace="include :: moment"></script>
-<script th:replace="include :: jquerydaterangepicker"></script>
-<link th:replace="include :: cssjquerydaterangepicker"/>
-<script th:src="@{/js/ruches/evenementListe.js}"></script>
-<script th:inline="javascript">
-	const Evenements = /*[[#{evenementremplissagehausse}]]*/ null;
-	const buttontextprint = /*[[#{buttontextprint}]]*/null;
-	const buttontextcol = /*[[#{buttontextcol}]]*/null;
-	document.addEventListener('DOMContentLoaded', () => evenementListe(true));
-</script>
+	<script th:replace="include :: moment"></script>
+	<script th:replace="include :: jquerydaterangepicker"></script>
+	<link th:replace="include :: cssjquerydaterangepicker" />
+	<script th:replace="include :: jsruchesnom('evenementListe')"></script>
+	<script th:inline="javascript">
+		const Evenements = /*[[#{evenementremplissagehausse}]]*/ null;
+		const buttontextprint = /*[[#{buttontextprint}]]*/null;
+		const buttontextcol = /*[[#{buttontextcol}]]*/null;
+		document.addEventListener('DOMContentLoaded', () => evenementListe(true));
+	</script>
 </head>
+
 <body>
 	<nav th:replace="navbar::navbar">Menu</nav>
 	<br />
@@ -22,7 +24,8 @@
 			<div class="col">
 				<h1 class="item" th:text="#{evenementremplissagehausse}"></h1>
 			</div>
-			<div th:insert="includeForm :: evenementListeDates(retController='/evenement/hausse/listeRemplissageHausse')" class="col">
+			<div th:insert="includeForm :: evenementListeDates(retController='/evenement/hausse/listeRemplissageHausse')"
+				class="col">
 			</div>
 		</div>
 	</div>
@@ -59,10 +62,11 @@
 					<td th:text="${evenement.hausse?.nom}"></td>
 					<td th:text="${evenement.valeur}"></td>
 					<td th:text="${evenement.commentaire}"></td>
-				</tr>				
+				</tr>
 			</tbody>
 		</table>
 	</div>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
