--- a/src/main/resources/templates/evenement/evenementSucreListe.html
+++ b/src/main/resources/templates/evenement/evenementSucreListe.html
@@ -1,72 +1,72 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head
-	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:replace="include :: moment"></script>
-<script th:replace="include :: jquerydaterangepicker"></script>
-<link th:replace="include :: cssjquerydaterangepicker" />
-<script th:src="@{/js/ruches/evenementListe.js}"></script>
-<script th:inline="javascript">
-	const buttTxtPrint = /*[[#{buttontextprint}]]*/null;
-	const buttTxtCol = /*[[#{buttontextcol}]]*/null;
-	const Evenements = /*[[#{evenementssucre}]]*/null;
-	document.addEventListener('DOMContentLoaded', () => {
-				const idTbl = '#evenementssucre';
-				new DataTable(idTbl, {
-					order : [ [ 0, 'desc' ] ],
-					dom : 'Blftip',
-					scrollX: true,
-					buttons : [ 'csv', {
-						extend : 'pdf',
-						exportOptions : {
-							columns : ':visible'
-						},
-						title : '',
-						action: function (e, dt, node, config)
-						{
-							config.title = Evenements + " " + (new Date()).toLocaleDateString();
-							const inputSearch = table.search();
-							if (inputSearch.length !== 0) {
-						    	config.title += " <" + inputSearch + ">";
-							}
-							$.fn.dataTable.ext.buttons.pdfHtml5.action.call(this ,e, dt, node, config);
+
+<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+	<script th:replace="include :: moment"></script>
+	<script th:replace="include :: jquerydaterangepicker"></script>
+	<link th:replace="include :: cssjquerydaterangepicker" />
+	<script th:replace="include :: jsruchesnom('evenementListe')"></script>
+	<script th:inline="javascript">
+		const buttTxtPrint = /*[[#{buttontextprint}]]*/null;
+		const buttTxtCol = /*[[#{buttontextcol}]]*/null;
+		const Evenements = /*[[#{evenementssucre}]]*/null;
+		document.addEventListener('DOMContentLoaded', () => {
+			const idTbl = '#evenementssucre';
+			new DataTable(idTbl, {
+				order: [ [0, 'desc'] ],
+				dom: 'Blftip',
+				scrollX: true,
+				buttons: ['csv', {
+					extend: 'pdf',
+					exportOptions: {
+						columns: ':visible'
+					},
+					title: '',
+					action: function (e, dt, node, config) {
+						config.title = Evenements + " " + (new Date()).toLocaleDateString();
+						const inputSearch = table.search();
+						if (inputSearch.length !== 0) {
+							config.title += " <" + inputSearch + ">";
 						}
-					}, {
-						extend : 'print',
-						text : buttTxtPrint
-					}, {
-						extend : 'colvis',
-						text : buttTxtCol
-					} ],
-					"footerCallback" : function(row, data, start, end, display) {
-						var api = this.api(), data;
-						// Remove the formatting to get integer data for summation
-						var intVal = function(i) {
-							return typeof i === 'string' ? i.replace(',', '') * 1 : typeof i === 'number' ? i : 0;
-						};
-						var valPoids = function(i) {
-							return typeof i === 'string' ? i.replace(/[,]/, '.') * 1 : typeof i === 'number' ? i : 0;
-						};
-						let coltotal = 4;
-						let total = api.column(coltotal, {
-							search : 'applied'
-						}).data().reduce(function(a, b) {
-							return valPoids(a) + valPoids(b);
-						}, 0);
-						let pageTotal = api.column(coltotal, {
-							page : 'current'
-						}).data().reduce(function(a, b) {
-							return valPoids(a) + valPoids(b);
-						}, 0);
-						$(api.column(coltotal).footer()).html(
-								Number.parseFloat(total).toFixed(2) + '<br/>page '
-										+ Number.parseFloat(pageTotal).toFixed(2));
+						$.fn.dataTable.ext.buttons.pdfHtml5.action.call(this, e, dt, node, config);
 					}
-				});
-				evenementListe(false);
+				}, {
+						extend: 'print',
+						text: buttTxtPrint
+					}, {
+						extend: 'colvis',
+						text: buttTxtCol
+					}],
+				"footerCallback": function (row, data, start, end, display) {
+					var api = this.api(), data;
+					// Remove the formatting to get integer data for summation
+					var intVal = function (i) {
+						return typeof i === 'string' ? i.replace(',', '') * 1 : typeof i === 'number' ? i : 0;
+					};
+					var valPoids = function (i) {
+						return typeof i === 'string' ? i.replace(/[,]/, '.') * 1 : typeof i === 'number' ? i : 0;
+					};
+					let coltotal = 4;
+					let total = api.column(coltotal, {
+						search: 'applied'
+					}).data().reduce(function (a, b) {
+						return valPoids(a) + valPoids(b);
+					}, 0);
+					let pageTotal = api.column(coltotal, {
+						page: 'current'
+					}).data().reduce(function (a, b) {
+						return valPoids(a) + valPoids(b);
+					}, 0);
+					$(api.column(coltotal).footer()).html(
+						Number.parseFloat(total).toFixed(2) + '<br/>page '
+						+ Number.parseFloat(pageTotal).toFixed(2));
+				}
 			});
-</script>
+			evenementListe(false);
+		});
+	</script>
 </head>
+
 <body>
 	<nav th:replace="navbar::navbar">Menu</nav>
 	<br />
@@ -77,14 +77,12 @@
 			<div class="col">
 				<h1 class="item" th:text="#{evenementssucre}"></h1>
 			</div>
-			<div
-				th:insert="includeForm :: evenementListeDates(retController='/evenement/essaim/listeSucre')"
+			<div th:insert="includeForm :: evenementListeDates(retController='/evenement/essaim/listeSucre')"
 				class="col"></div>
 		</div>
 	</div>
 	<div class="container-fluid">
-		<table class="table table-bordered table-striped table-sm"
-			id="evenementssucre">
+		<table class="table table-bordered table-striped table-sm" id="evenementssucre">
 			<thead>
 				<tr>
 					<th th:text="#{date}"></th>
@@ -105,20 +103,17 @@
 			</thead>
 			<tbody>
 				<tr th:each="eve : ${evenements}">
-					<td><a
-						th:text="${#temporals.format(eve.date, 'yyyy/MM/dd HH:mm')}"
-						th:href="@{'/evenement/'+${eve.id}}+'?type=sucre'"></a></td>
+					<td><a th:text="${#temporals.format(eve.date, 'yyyy/MM/dd HH:mm')}"
+							th:href="@{'/evenement/'+${eve.id}}+'?type=sucre'"></a></td>
 					<td th:text="${eve.ruche?.nom}"></td>
 					<td th:text="${eve.essaim?.nom}"></td>
 					<td th:text="${eve.rucher?.nom}"></td>
-					<td class="num"
-						th:text="${#numbers.formatDecimal(eve.valeur,1,2,'COMMA')}"></td>
+					<td class="num" th:text="${#numbers.formatDecimal(eve.valeur,1,2,'COMMA')}"></td>
 					<td th:text="${eve.commentaire}"></td>
 					<td th:with="ep=${evePose[eveStat.index]}">
-						<a
-						th:if="${ep} != null"
-						th:text="${#temporals.format(ep.date, 'yyyy/MM/dd HH:mm')}"
-						th:href="@{'/evenement/'+${ep.id}}+'?type=sucre'"></a></td>
+						<a th:if="${ep} != null" th:text="${#temporals.format(ep.date, 'yyyy/MM/dd HH:mm')}"
+							th:href="@{'/evenement/'+${ep.id}}+'?type=sucre'"></a>
+					</td>
 				</tr>
 			</tbody>
 			<tfoot>
@@ -133,4 +128,5 @@
 	</div>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
