--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -49,6 +49,11 @@
 <th:block th:replace="${links} ?: ~{}" />
 </head>
 
+<script th:fragment="jsruches" th:src=
+	"@{'/js/ruches-1/' + ${#strings.substringAfter(#execInfo.processedTemplateName,'/')} + '.js'}">
+</script>
+<script th:fragment="jsruchesnom(nom)" th:src="@{'/js/ruches-1/' + ${nom} + '.js'}"></script>
+
 <script th:fragment="d3" th:src="@{/js/d3.min-7.8.4.js}"></script>
 <script th:fragment="d3-color" th:src="@{/js/d3-color.min-3.1.0.js}"></script>
 <script th:fragment="d3-interpolate"
@@ -75,6 +80,7 @@
 
 <script defer th:fragment="dom-to-image"
 	th:src="@{/js/dom-to-image-more.min-2.15.0.js}"></script>
+	
 <script defer th:fragment="jspdf" th:src="@{/js/jspdf-2.5.1.umd.min.js}"></script>
 
 <script th:fragment="jsChart" th:src="@{/js/chart.umd-4.3.1.js}"></script>
