--- a/src/main/resources/templates/recolte/recoltesStat.html
+++ b/src/main/resources/templates/recolte/recoltesStat.html
@@ -2,16 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+<script th:replace="include :: jsruches"></script>
 	<script th:replace="include :: jsChart"></script>
 	<script th:replace="include :: d3-color"></script>
 	<script th:replace="include :: d3-interpolate"></script>
 	<script th:replace="include :: d3-scale-chromatic"></script>
-	<script th:src="@{/js/ruches/recoltesStat.js}"></script>
 	<script th:inline="javascript">
 		const poidsmiel = /*[[${poids}]]*/ null;
 		const nomsessaims = /*[[${noms}]]*/ null;
 		const poidsTotal = /*[[${poidsTotal}]]*/ null;
-		document.addEventListener('DOMContentLoaded', () => {graphe();});
 	</script>
 </head>
 
