--- a/src/main/resources/templates/recolte/recoltesStatProd.html
+++ b/src/main/resources/templates/recolte/recoltesStatProd.html
@@ -1,23 +1,23 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head
-	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:replace="include :: jsChart"></script>
-<script th:replace="include :: d3-color"></script>
-<script th:replace="include :: d3-interpolate"></script>
-<script th:replace="include :: d3-scale-chromatic"></script>
-<script th:src="@{/js/ruches/recoltesStatProd.js}"></script>
-<script th:inline="javascript">
-	const poidsMielHausses = /*[[${poidsMielHausses}]]*/null;
-	const poidsMielPots = /*[[${poidsMielPots}]]*/null;
-	const debutAnnee = /*[[${debutAnnee}]]*/null;
-	const nbIEssaims = /*[[${nbIEssaims}]]*/null;
-	const Hausses = /*[[#{Hausses}]]*/null;
-	const Pots = /*[[#{Pots}]]*/null;
-	const HaussesEssaim = /*[[#{HaussesEssaim}]]*/null;
-	document.addEventListener('DOMContentLoaded', grapheRecolte);
-</script>
+
+<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+	<script th:replace="include :: jsruches"></script>
+	<script th:replace="include :: jsChart"></script>
+	<script th:replace="include :: d3-color"></script>
+	<script th:replace="include :: d3-interpolate"></script>
+	<script th:replace="include :: d3-scale-chromatic"></script>
+	<script th:inline="javascript">
+		const poidsMielHausses = /*[[${poidsMielHausses}]]*/null;
+		const poidsMielPots = /*[[${poidsMielPots}]]*/null;
+		const debutAnnee = /*[[${debutAnnee}]]*/null;
+		const nbIEssaims = /*[[${nbIEssaims}]]*/null;
+		const Hausses = /*[[#{Hausses}]]*/null;
+		const Pots = /*[[#{Pots}]]*/null;
+		const HaussesEssaim = /*[[#{HaussesEssaim}]]*/null;
+	</script>
 </head>
+
 <body>
 	<nav th:replace="navbar::navbar"></nav>
 	<br />
@@ -30,9 +30,7 @@
 				<h1 class="item">
 					<a th:href="@{'/recolte/liste'}" th:text="#{Recoltes}"></a>
 					<th:block th:text="' '+#{PoidsMielAnneeKg}"></th:block>
-					&nbsp; <a
-						th:href="@{#{urldoc}+'3836_3476563104'}"
-						class="bi-book" th:title="#{Doc}" target="_blank"
+					&nbsp; <a th:href="@{#{urldoc}+'3836_3476563104'}" class="bi-book" th:title="#{Doc}" target="_blank"
 						aria-hidden="true"></a>
 				</h1>
 			</div>
@@ -40,4 +38,5 @@
 	</div>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
