--- a/src/main/resources/templates/evenement/evenementNotifListe.html
+++ b/src/main/resources/templates/evenement/evenementNotifListe.html
@@ -1,44 +1,17 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head
-	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:inline="javascript">
-	const url = /*[[@{'/evenement/listeNotif/'}]]*/null;
-	const Evenements = /*[[#{evenements}]]*/ null;
-	const Notifications = /*[[#{Notifications}]]*/ null;
-	const btp = /*[[#{buttontextprint}]]*/null;
-	const btc = /*[[#{buttontextcol}]]*/null;
-	document.addEventListener('DOMContentLoaded', () => {
-		$('.bi-question-lg').popover({
-	        html: true
-	    });
-	    $('.popover-dismiss').popover({
-	        trigger: 'focus'
-	    });		
-		$('#tous').on('change', function() {
-			location = url + ($(this).is(':checked'));
-		});
-		new DataTable('#evenementsnotif', {
-			order : [ [ 0, 'desc' ] ],
-			dom : 'Blftip',
-			scrollX: true,
-			buttons : [ 'csv', {
-				extend : 'pdf',
-				exportOptions : {
-					columns : ':visible'
-				},
-				title : Evenements + " " + Notifications + " " + (new Date()).toLocaleDateString()
-			}, {
-				extend : 'print',
-				text : btp
-			}, {
-				extend : 'colvis',
-				text : btc
-			} ]
-		});
-	});
-</script>
+
+<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+	<script th:replace="include :: jsruches"></script>
+	<script th:inline="javascript">
+		const url = /*[[@{'/evenement/listeNotif/'}]]*/null;
+		const Evenements = /*[[#{evenements}]]*/ null;
+		const Notifications = /*[[#{Notifications}]]*/ null;
+		const btp = /*[[#{buttontextprint}]]*/null;
+		const btc = /*[[#{buttontextcol}]]*/null;
+	</script>
 </head>
+
 <body>
 	<nav th:replace="navbar::navbar">Menu</nav>
 	<br />
@@ -50,19 +23,17 @@
 				<h1 class="item" th:text="#{Notifications}"></h1>
 			</div>
 			<div class="col">
-				<a href="#" class="bi-question-lg" data-bs-toggle="popover"
-					data-bs-trigger="focus" tabindex="0" role="button"
-					th:attr="data-bs-content=${dests}"></a>
+				<a href="#" class="bi-question-lg" data-bs-toggle="popover" data-bs-trigger="focus" tabindex="0"
+					role="button" th:attr="data-bs-content=${dests}"></a>
 				<span class="padicons">
-					<input type="checkbox" id="tous" th:title="#{tous}"
-					th:checked="${tous}" /> <label for="tous" th:text="#{tous}"></label>
+					<input type="checkbox" id="tous" th:title="#{tous}" th:checked="${tous}" /> <label for="tous"
+						th:text="#{tous}"></label>
 				</span>
 			</div>
 		</div>
 	</div>
 	<div class="container-fluid">
-		<table class="table table-bordered table-striped table-sm"
-			id="evenementsnotif">
+		<table class="table table-bordered table-striped table-sm" id="evenementsnotif">
 			<thead>
 				<tr>
 					<th th:text="#{date}"></th>
@@ -85,9 +56,8 @@
 			</thead>
 			<tbody>
 				<tr th:each="evenement : ${evenements}">
-					<td><a
-						th:text="${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"
-						th:href="@{'/evenement/'+${evenement.id}}"></a></td>
+					<td><a th:text="${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"
+							th:href="@{'/evenement/'+${evenement.id}}"></a></td>
 					<td th:text="#{${evenement.type}}"></td>
 					<td th:text="${evenement.ruche?.nom}"></td>
 					<td th:text="${evenement.essaim?.nom}"></td>
@@ -101,4 +71,5 @@
 	</div>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
