--- a/src/main/resources/templates/evenement/evenementSucreListe.html
+++ b/src/main/resources/templates/evenement/evenementSucreListe.html
@@ -5,63 +5,14 @@
 	<script th:replace="include :: moment"></script>
 	<script th:replace="include :: jquerydaterangepicker"></script>
 	<link th:replace="include :: cssjquerydaterangepicker" />
+	<script th:replace="include :: jsruches"></script>
 	<script th:replace="include :: jsruchesnom('evenementListe')"></script>
 	<script th:inline="javascript">
 		const buttTxtPrint = /*[[#{buttontextprint}]]*/null;
 		const buttTxtCol = /*[[#{buttontextcol}]]*/null;
 		const Evenements = /*[[#{evenementssucre}]]*/null;
 		document.addEventListener('DOMContentLoaded', () => {
-			const idTbl = '#evenementssucre';
-			new DataTable(idTbl, {
-				order: [ [0, 'desc'] ],
-				dom: 'Blftip',
-				scrollX: true,
-				buttons: ['csv', {
-					extend: 'pdf',
-					exportOptions: {
-						columns: ':visible'
-					},
-					title: '',
-					action: function (e, dt, node, config) {
-						config.title = Evenements + " " + (new Date()).toLocaleDateString();
-						const inputSearch = table.search();
-						if (inputSearch.length !== 0) {
-							config.title += " <" + inputSearch + ">";
-						}
-						$.fn.dataTable.ext.buttons.pdfHtml5.action.call(this, e, dt, node, config);
-					}
-				}, {
-						extend: 'print',
-						text: buttTxtPrint
-					}, {
-						extend: 'colvis',
-						text: buttTxtCol
-					}],
-				"footerCallback": function (row, data, start, end, display) {
-					var api = this.api(), data;
-					// Remove the formatting to get integer data for summation
-					var intVal = function (i) {
-						return typeof i === 'string' ? i.replace(',', '') * 1 : typeof i === 'number' ? i : 0;
-					};
-					var valPoids = function (i) {
-						return typeof i === 'string' ? i.replace(/[,]/, '.') * 1 : typeof i === 'number' ? i : 0;
-					};
-					let coltotal = 4;
-					let total = api.column(coltotal, {
-						search: 'applied'
-					}).data().reduce(function (a, b) {
-						return valPoids(a) + valPoids(b);
-					}, 0);
-					let pageTotal = api.column(coltotal, {
-						page: 'current'
-					}).data().reduce(function (a, b) {
-						return valPoids(a) + valPoids(b);
-					}, 0);
-					$(api.column(coltotal).footer()).html(
-						Number.parseFloat(total).toFixed(2) + '<br/>page '
-						+ Number.parseFloat(pageTotal).toFixed(2));
-				}
-			});
+			evenementSucreListe();
 			evenementListe(false);
 		});
 	</script>
