--- a/src/main/resources/templates/personne/personnesListe.html
+++ b/src/main/resources/templates/personne/personnesListe.html
@@ -16,10 +16,10 @@
 					{
 						extend: 'pdf', exportOptions: {columns: ':visible'},
 						action: function (e, dt, node, config) {
-							config.title = Personnes + " " + (new Date()).toLocaleDateString();
-							const inputSearch = table.search();
+							config.title = Personnes + ' ' + (new Date()).toLocaleDateString();
+							const inputSearch = this.search();
 							if (inputSearch.length !== 0) {
-								config.title += " <" + inputSearch + ">";
+								config.title += ' <' + inputSearch + '>';
 							}
 							$.fn.dataTable.ext.buttons.pdfHtml5.action.call(this, e, dt, node, config);
 						}
