--- a/src/main/resources/templates/recolte/recoltesListe.html
+++ b/src/main/resources/templates/recolte/recoltesListe.html
@@ -17,10 +17,10 @@
 						columns: ':visible'
 					},
 					action: function (e, dt, node, config) {
-						config.title = Recoltes + " " + (new Date()).toLocaleDateString();
-						const inputSearch = table.search();
+						config.title = Recoltes + ' ' + (new Date()).toLocaleDateString();
+						const inputSearch = this.search();
 						if (inputSearch.length !== 0) {
-							config.title += " <" + inputSearch + ">";
+							config.title += ' <' + inputSearch + '>';
 						}
 						$.fn.dataTable.ext.buttons.pdfHtml5.action.call(this, e, dt, node, config);
 					}
@@ -31,7 +31,7 @@
 						extend: 'colvis',
 						text: buttontextcol
 					}],
-				"order": [ [0, "desc"] ]
+				order: [ [0, 'desc'] ]
 			});
 		});
 	</script>
