--- a/src/main/resources/templates/essaim/essaimStatistiques.html
+++ b/src/main/resources/templates/essaim/essaimStatistiques.html
@@ -19,7 +19,7 @@ document.addEventListener('DOMContentLoaded', () => {
 	    buttons: [
 	    	'csv',
 	    	{extend: 'pdf', exportOptions: {columns: ':visible'}, 
-	    		title: Essaims + " " + Production + " " + (new Date()).toLocaleDateString()},
+	    		title: Essaims + ' ' + Production + ' ' + (new Date()).toLocaleDateString()},
 	        {extend: 'print', text: buttontextprint},
 	        {extend: 'colvis', text: buttontextcol}
         ]
