--- a/src/main/resources/templates/evenement/evenementCadreDetail.html
+++ b/src/main/resources/templates/evenement/evenementCadreDetail.html
@@ -5,12 +5,11 @@
 	<script th:inline="javascript">
 		const suppeve = /*[[#{supprimerevenement}]]*/null;
 		document.addEventListener('DOMContentLoaded', () => {
-			document.getElementById('supprime').addEventListener("click", (event) => {
+			document.getElementById('supprime').addEventListener('click', (event) => {
 				if (confirm(suppeve)) {
-					return true;
+					return;
 				}
 				event.preventDefault();
-				return false;
 			});
 		});
 	</script>
