--- a/src/main/resources/templates/evenement/evenementRemplissageDetail.html
+++ b/src/main/resources/templates/evenement/evenementRemplissageDetail.html
@@ -7,10 +7,9 @@
 	document.addEventListener('DOMContentLoaded', () => {
 		document.getElementById('supprime').addEventListener('click', (event) => {
 				if (confirm(suppeve)) {
-					return true;
+					return;
 				}
 				event.preventDefault();
-				return false;
 			});
 	});
 </script>
