--- a/src/main/resources/templates/hausse/hausseDetail.html
+++ b/src/main/resources/templates/hausse/hausseDetail.html
@@ -1,94 +1,26 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head
-	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:inline="javascript">
-const _csrf_token = /*[[${_csrf.token}]]*/ null;
-const _csrf_param_name = /*[[${_csrf.parameterName}]]*/ null;
-const haussenoms = /*[[${haussenoms}]]*/ null;
-const recolteHausses = /*[[${recolteHausses}]]*/ null;
-const haussesupp = /*[[#{haussenonsupprimeerefrecolte}]]*/ null;
-const supphausseeve = /*[[#{supprimerhausseevenement}]]*/ null;
-const supphausse = /*[[#{supprimerhausse}]]*/ null;
-const nomhaussesv = /*[[#{nomhaussesvirgule}]]*/ null;
-const nomexistentdeja = /*[[#{nomexistentdeja}]]*/ null;
-const evenements = /*[[${evenements}]]*/ null;
-const urlclone = /*[[@{/hausse/clone/}]]*/ null;
-const hausseid = /*[[${hausse.id}]]*/ null;
-const hausses = /*[[#{Hausses}]]*/ null;
-const creer = /*[[#{creer}]]*/ null;
-document.addEventListener('DOMContentLoaded', () => {
-	document.getElementById('supprime').addEventListener("click", (event) => {
-		if(recolteHausses) {
-			alert(haussesupp);
-		} else if (evenements) {
-	        if (confirm(supphausseeve)) {
-				return true;
-			}
-		} else {
-			if (confirm(supphausse)) {
-				return true;
-			}
-		}
-		event.preventDefault();
-		return false;
-	});
-	function nomexiste (value) {   
-		return $.inArray(value, haussenoms) != -1;
-		};
-	$( "#clone" ).click(function() {
-		function annule () {
-			while (iajout--) {
-				haussenoms.pop();
-			}
-		}
-		const noms = prompt(nomhaussesv);
-		let iajout = 0;
-		if (noms == null || noms == "") {
-		    return;
-		} else {
-			let tabNomExiste=[];
-			let tabNomOk=[];
-			noms.split(',').filter(s => s.trim()).map(item => item.trim()).forEach(function(item){
-				if (nomexiste(item)) {
-					tabNomExiste.push(item);
-				} else {
-					tabNomOk.push(item);
-					/*[- ce nom ne doit pas être réutilisé -]*/
-					haussenoms.push(item);
-					iajout++;
-				}
-			});
-			if (tabNomExiste.length > 0) {
-				let promptexistedeja = hausses + ' : ' + tabNomExiste.join(',') + ' ' + nomexistentdeja;
-				if (tabNomOk.length == 0) {
-					alert(promptexistedeja);
-					return;					
-				}
-				if (!confirm(promptexistedeja + '. ' + creer + ' ' + tabNomOk.join(',') + ' ?')) {
-					annule();
-					return;
-				}
-			} else if (tabNomOk.length === 0) { 
-				return; 
-			} else {
-				if (!confirm(creer + ' ' + tabNomOk.join(',') + ' ?')) {
-					annule();
-					return;
-				}
-			}		
-			let requestData = {nomclones : tabNomOk.join(',')};
-		    requestData[_csrf_param_name] = _csrf_token;
-		    $.post( urlclone + hausseid,
-					requestData).done(function (data) { 
-						alert( data );
-						document.location.reload(true);
-			});
-		} 
-	});
-});
-</script>
+
+<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+	<script th:replace="include :: jsruches"></script>
+	<script th:inline="javascript">
+		const _csrf_token = /*[[${_csrf.token}]]*/ null;
+		const _csrf_param_name = /*[[${_csrf.parameterName}]]*/ null;
+		const haussenoms = /*[[${haussenoms}]]*/ null;
+		const recolteHausses = /*[[${recolteHausses}]]*/ null;
+		const haussesupp = /*[[#{haussenonsupprimeerefrecolte}]]*/ null;
+		const supphausseeve = /*[[#{supprimerhausseevenement}]]*/ null;
+		const supphausse = /*[[#{supprimerhausse}]]*/ null;
+		const nomhaussesv = /*[[#{nomhaussesvirgule}]]*/ null;
+		const nomexistentdeja = /*[[#{nomexistentdeja}]]*/ null;
+		const evenements = /*[[${evenements}]]*/ null;
+		const urlclone = /*[[@{/hausse/clone/}]]*/ null;
+		const hausseid = /*[[${hausse.id}]]*/ null;
+		const hausses = /*[[#{Hausses}]]*/ null;
+		const creer = /*[[#{creer}]]*/ null;
+	</script>
 </head>
+
 <body>
 	<nav th:replace="navbar::navbar"></nav>
 	<br />
@@ -103,22 +35,16 @@ document.addEventListener('DOMContentLoaded', () => {
 				</h1>
 			</div>
 			<div class="col">
-				<a th:href="@{'/hausse/modifie/'+${hausse.id}}" class="bi-pencil"
-					th:title="#{modifier}" aria-hidden="true"></a> &nbsp; <span
-					id="clone" class="bi-collection cursorpointer" th:title="#{cloner}"
-					aria-hidden="true"> </span> <a id="supprime"
-					th:href="@{'/hausse/supprime/'+${hausse.id}}"
-					class="bi-trash" style="color: red"
+				<a th:href="@{'/hausse/modifie/'+${hausse.id}}" class="bi-pencil" th:title="#{modifier}"
+					aria-hidden="true"></a> &nbsp; <span id="clone" class="bi-collection cursorpointer"
+					th:title="#{cloner}" aria-hidden="true"> </span> <a id="supprime"
+					th:href="@{'/hausse/supprime/'+${hausse.id}}" class="bi-trash" style="color: red"
 					th:title="#{supprimer}" aria-hidden="true"></a>&nbsp; <a
-					th:href="@{'/evenement/hausse/'+${hausse.id}}"
-					class="padicons bi-list-ul" th:title="#{evenements}"
-					aria-hidden="true"></a> <a
-					th:href="@{'/evenement/hausse/commentaire/cree/'+${hausse.id}}"
-					class="bi-chat-text" th:title="#{evenementCommentaire}"
-					aria-hidden="true"></a> <a
-					th:href="@{'/evenement/hausse/remplissage/cree/'+${hausse.id}}"
-					class="bi-square-half" th:title="#{evenementRemplissage}"
-					aria-hidden="true"></a>
+					th:href="@{'/evenement/hausse/'+${hausse.id}}" class="padicons bi-list-ul" th:title="#{evenements}"
+					aria-hidden="true"></a> <a th:href="@{'/evenement/hausse/commentaire/cree/'+${hausse.id}}"
+					class="bi-chat-text" th:title="#{evenementCommentaire}" aria-hidden="true"></a> <a
+					th:href="@{'/evenement/hausse/remplissage/cree/'+${hausse.id}}" class="bi-square-half"
+					th:title="#{evenementRemplissage}" aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
@@ -136,11 +62,9 @@ document.addEventListener('DOMContentLoaded', () => {
 			</thead>
 			<tbody>
 				<tr>
-					<td th:if="${session.voirInactif}"
-						th:text="${hausse.active}? #{oui} : #{non}"></td>
+					<td th:if="${session.voirInactif}" th:text="${hausse.active}? #{oui} : #{non}"></td>
 					<td th:text="${hausse.dateAcquisition}"></td>
-					<td class="num"
-						th:text="${#numbers.formatDecimal(hausse.poidsVide,1,2,'DEFAULT')}"></td>
+					<td class="num" th:text="${#numbers.formatDecimal(hausse.poidsVide,1,2,'DEFAULT')}"></td>
 					<td class="num" th:text="${hausse.nbCadres}"></td>
 					<td class="num" th:text="${hausse.nbCadresMax}"></td>
 					<td th:text="${hausse.commentaire}"></td>
@@ -162,24 +86,20 @@ document.addEventListener('DOMContentLoaded', () => {
 			</thead>
 			<tbody>
 				<tr>
-					<td><a th:href="@{'/ruche/'+${hausse.ruche?.id}}"
-						th:text="${hausse.ruche?.nom}"></a></td>
+					<td><a th:href="@{'/ruche/'+${hausse.ruche?.id}}" th:text="${hausse.ruche?.nom}"></a></td>
 					<td th:text="${hausse.ordreSurRuche}"></td>
-					<td><a th:if="${eveHausse != null}"
-						th:href="@{'/evenement/'+${eveHausse?.id}+'?type=hausse'}"
-						th:text="${#temporals.format(eveHausse?.date, 'yyyy/MM/dd')}"></a>
+					<td><a th:if="${eveHausse != null}" th:href="@{'/evenement/'+${eveHausse?.id}+'?type=hausse'}"
+							th:text="${#temporals.format(eveHausse?.date, 'yyyy/MM/dd')}"></a>
 					</td>
 					<td><a th:href="@{'/rucher/'+${hausse.ruche?.rucher?.id}}"
-						th:text="${hausse.ruche?.rucher?.nom}"></a></td>
-					<td><a th:if="${eveRucher != null}"
-						th:href="@{'/evenement/'+${eveRucher?.id}+'?type=hausse'}"
-						th:text="${#temporals.format(eveRucher?.date, 'yyyy/MM/dd')}"></a>
+							th:text="${hausse.ruche?.rucher?.nom}"></a></td>
+					<td><a th:if="${eveRucher != null}" th:href="@{'/evenement/'+${eveRucher?.id}+'?type=hausse'}"
+							th:text="${#temporals.format(eveRucher?.date, 'yyyy/MM/dd')}"></a>
 					</td>
 					<td><a th:href="@{'/essaim/'+${hausse.ruche?.essaim?.id}}"
-						th:text="${hausse.ruche?.essaim?.nom}"></a></td>
-					<td><a th:if="${eveRuche != null}"
-						th:href="@{'/evenement/'+${eveRuche?.id}+'?type=hausse'}"
-						th:text="${#temporals.format(eveRuche?.date, 'yyyy/MM/dd')}"></a>
+							th:text="${hausse.ruche?.essaim?.nom}"></a></td>
+					<td><a th:if="${eveRuche != null}" th:href="@{'/evenement/'+${eveRuche?.id}+'?type=hausse'}"
+							th:text="${#temporals.format(eveRuche?.date, 'yyyy/MM/dd')}"></a>
 					</td>
 				</tr>
 			</tbody>
@@ -189,28 +109,23 @@ document.addEventListener('DOMContentLoaded', () => {
 			<table class="table table-sm table-bordered">
 				<thead>
 					<tr>
-						<th
-							th:text="#{remplissage}"></th>
+						<th th:text="#{remplissage}"></th>
 						<th th:text="#{date}"></th>
-						<th
-							th:text="#{commentaireremplissage}"></th>
-						<th
-							th:text="#{COMMENTAIREHAUSSE}"></th>
+						<th th:text="#{commentaireremplissage}"></th>
+						<th th:text="#{COMMENTAIREHAUSSE}"></th>
 						<th th:text="#{date}"></th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
 						<td class="num" th:text="${eveRempl?.valeur}"></td>
-						<td><a th:if="${eveRempl != null}"
-							th:href="@{'/evenement/'+${eveRempl?.id}+'?type=hausse'}"
-							th:text="${#temporals.format(eveRempl?.date, 'yyyy/MM/dd')}"></a>
+						<td><a th:if="${eveRempl != null}" th:href="@{'/evenement/'+${eveRempl?.id}+'?type=hausse'}"
+								th:text="${#temporals.format(eveRempl?.date, 'yyyy/MM/dd')}"></a>
 						</td>
 						<td th:text="${eveRempl?.commentaire}"></td>
 						<td th:text="${eveComm?.commentaire}"></td>
-						<td><a th:if="${eveComm != null}"
-							th:href="@{'/evenement/'+${eveComm?.id}+'?type=hausse'}"
-							th:text="${#temporals.format(eveComm?.date, 'yyyy/MM/dd')}"></a>
+						<td><a th:if="${eveComm != null}" th:href="@{'/evenement/'+${eveComm?.id}+'?type=hausse'}"
+								th:text="${#temporals.format(eveComm?.date, 'yyyy/MM/dd')}"></a>
 						</td>
 					</tr>
 				</tbody>
@@ -219,4 +134,5 @@ document.addEventListener('DOMContentLoaded', () => {
 	</div>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
