--- a/src/main/resources/templates/hausse/hausseForm.html
+++ b/src/main/resources/templates/hausse/hausseForm.html
@@ -1,75 +1,62 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head
-	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+
+<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 	<script th:replace="include :: jsdatetimepicker"></script>
 	<link th:replace="include :: cssdatetimepicker" />
-<script th:inline="javascript">
-	const hausseNoms = /*[[${hausseNoms}]]*/null;
-	const nomexiste = /*[[#{nomexiste}]]*/null;
-	const saisirnbcadresinfmax = /*[[#{saisirnbcadresinfmax}]]*/null;
-	document.addEventListener('DOMContentLoaded', () => {
-		$('#dateAcquisition').datetimepicker(
+	<script th:inline="javascript">
+		const hausseNoms = /*[[${hausseNoms}]]*/null;
+		const nomexiste = /*[[#{nomexiste}]]*/null;
+		const saisirnbcadresinfmax = /*[[#{saisirnbcadresinfmax}]]*/null;
+		document.addEventListener('DOMContentLoaded', () => {
+			$('#dateAcquisition').datetimepicker(
 				{timepicker: false, format: 'Y-m-d'});
-		$.datetimepicker.setLocale(window.navigator.language.substring(0, 2));
-		document.getElementById('nom').focus();
-		jQuery.validator.addMethod('nomExiste', function(value) {   
-    		return $.inArray(value, hausseNoms) == -1;
+			$.datetimepicker.setLocale(window.navigator.language.substring(0, 2));
+			document.getElementById('nom').focus();
+			jQuery.validator.addMethod('nomExiste', function (value) {
+				return $.inArray(value, hausseNoms) === -1;
 			}, nomexiste);
-		if ((window.navigator.language == 'fr') || (window.navigator.language.indexOf('fr') != -1)) {
-			$.datepicker.setDefaults(
-				$.datepicker.regional['fr']
-			);
-		} else {
-			$.datepicker.setDefaults(
-					$.datepicker.regional['en']
-				);
-		}
-		$.datepicker.setDefaults({
-				dateFormat : 'yy-mm-dd',
-				changeYear: true
+			$.validator.addMethod('lowerOrEqualThan', function (value, element, param) {
+				// let $otherElement = $(param);
+				return parseInt(value, 10) <= parseInt( $(param).val(), 10);
 			});
-		$('#dateAcquisition').datepicker();
-		$.validator.addMethod('lowerOrEqualThan', function(value, element, param) {
-			let $otherElement = $(param);
-			return parseInt(value, 10) <= parseInt($otherElement.val(), 10);
-		});
-		$('#hausseForm').validate({
-			errorClass: 'erreur-form',
-			errorPlacement: function(error, element) {
-			    error.insertBefore(element.closest('div'));
-			},
-			rules : {
-				nom : {
-					required : true,
-					nomExiste : true,
-					normalizer : function(value) {
-						return $.trim(value);
+			$('#hausseForm').validate({
+				errorClass: 'erreur-form',
+				errorPlacement: function (error, element) {
+					error.insertBefore(element.closest('div'));
+				},
+				rules: {
+					nom: {
+						required: true,
+						nomExiste: true,
+						normalizer: function (value) {
+							return $.trim(value);
+						}
+					},
+					dateAcquisition: {
+						required: true
+					},
+					poidsVide: {
+						required: true
+					},
+					nbCadres: {
+						required: true,
+						digits: true,
+						lowerOrEqualThan: '#nbCadresMax'
+					},
+					nbCadresMax: {
+						required: true,
+						digits: true
 					}
 				},
-				dateAcquisition : {
-					"required" : true
-				},
-				poidsVide : {
-					required : true
-				},
-				nbCadres : {
-					required : true,
-					digits : true,
-					lowerOrEqualThan : '#nbCadresMax'
-				},
-				nbCadresMax : {
-					required : true,
-					digits : true
+				messages: {
+					nbCadres: saisirnbcadresinfmax
 				}
-			},
-			messages : {
-				nbCadres : saisirnbcadresinfmax
-			}
+			});
 		});
-	});
-</script>
+	</script>
 </head>
+
 <body>
 	<nav th:replace="navbar::navbar"></nav>
 	<br />
@@ -84,39 +71,36 @@
 				</h1>
 				<h1 class="item" th:if="${hausse.id}">
 					<th:block th:text="#{modification}"></th:block>
-					<a th:href="@{'/hausse/'+${hausse.id}}"
-						th:text="#{hausse} + ' ' + ${hausse.nom}"></a>
+					<a th:href="@{'/hausse/'+${hausse.id}}" th:text="#{hausse} + ' ' + ${hausse.nom}"></a>
 				</h1>
 			</div>
 		</div>
 	</div>
-	<form action="#" th:action="@{/hausse/sauve}" th:object="${hausse}"
-		method="post" id="hausseForm">
-		<input type="hidden" th:field="*{id}" /> <input type="hidden"
-			th:field="*{ruche}" /> <input type="hidden"
+	<form action="#" th:action="@{/hausse/sauve}" th:object="${hausse}" method="post" id="hausseForm">
+		<input type="hidden" th:field="*{id}" /> <input type="hidden" th:field="*{ruche}" /> <input type="hidden"
 			th:field="*{ordreSurRuche}" />
 		<div th:replace="includeForm :: nomField"></div>
 		<div th:replace="includeForm :: activeField"></div>
 		<div th:replace="includeForm :: dateAcquisitionField"></div>
 		<div class="form-floating mb-3">
-			<input placeholder="5.000" class="form-control" type="number"
-				step="0.001" min="0" max="20" th:field="*{poidsVide}"
-				th:errorclass="fieldError" /> <label class="form-label"
-				for="poidsVide" th:text="#{poidskg}"></label>
+			<input placeholder="5.000" class="form-control" type="number" step="0.001" min="0" max="20"
+				th:field="*{poidsVide}" th:errorclass="fieldError" /> <label class="form-label" for="poidsVide"
+				th:text="#{poidskg}"></label>
 		</div>
 		<div class="form-floating mb-3">
-			<input placeholder="9" class="form-control" type="number"
-				th:field="*{nbCadres}" th:errorclass="fieldError" /> <label
-				class="form-label" for="nbCadres" th:text="#{nombredecadres}"></label>
+			<input placeholder="9" class="form-control" type="number" th:field="*{nbCadres}"
+				th:errorclass="fieldError" /> <label class="form-label" for="nbCadres"
+				th:text="#{nombredecadres}"></label>
 		</div>
 		<div class="form-floating mb-3">
-			<input placeholder="9" class="form-control" type="number"
-				th:field="*{nbCadresMax}" th:errorclass="fieldError" /> <label
-				class="form-label" for="nbCadresMax" th:text="#{nombredecadresmax}"></label>
+			<input placeholder="9" class="form-control" type="number" th:field="*{nbCadresMax}"
+				th:errorclass="fieldError" /> <label class="form-label" for="nbCadresMax"
+				th:text="#{nombredecadresmax}"></label>
 		</div>
 		<div th:replace="includeForm :: commentaireField"></div>
 		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
