--- a/src/main/resources/templates/ruche/rucheAjoutRetrait.html
+++ b/src/main/resources/templates/ruche/rucheAjoutRetrait.html
@@ -1,46 +1,47 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head
-	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:inline="javascript">
-	const _csrf_token = /*[[${_csrf.token}]]*/null;
-	const _csrf_param_name = /*[[${_csrf.parameterName}]]*/null;
-	const urlRucheOdreHause = /*[[@{/ruche/ordreHausses/}]]*/null;
-	const rucheId = /*[[${ruche.id}]]*/null;
-	document.addEventListener('DOMContentLoaded', () => {
-		const tableRetrait = new DataTable('#retraitHausses', {
-			paging: false,
-			searching: false,
-			info: false,
-			ordering: true,
-			rowReorder: {
-		        selector: 'tr'
-		    },
-			columns : [
-		    	{ orderable : false },
-		    	{ orderable : false }
-		  	]
-		});
-		tableRetrait.on( 'row-reordered', function (e, diff) {
-			if(diff.length === 0) return;
-			let hausses = [];
-			$("#retraitHausses tbody tr a").each(function () {
-				const href = $(this).attr('href');
-				hausses.push(href.substring(href.lastIndexOf('/') + 1));
+
+<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+	<script th:inline="javascript">
+		const _csrf_token = /*[[${_csrf.token}]]*/null;
+		const _csrf_param_name = /*[[${_csrf.parameterName}]]*/null;
+		const urlRucheOdreHause = /*[[@{/ruche/ordreHausses/}]]*/null;
+		const rucheId = /*[[${ruche.id}]]*/null;
+		document.addEventListener('DOMContentLoaded', () => {
+			const tableRetrait = new DataTable('#retraitHausses', {
+				paging: false,
+				searching: false,
+				info: false,
+				ordering: true,
+				rowReorder: {
+					selector: 'tr'
+				},
+				columns: [
+					{orderable: false},
+					{orderable: false}
+				]
 			});
-		    let requestData = {hausses : hausses};
-			requestData[_csrf_param_name] = _csrf_token;
-			$.post(urlRucheOdreHause + rucheId,
+			tableRetrait.on('row-reordered', function (e, diff) {
+				if (diff.length === 0) return;
+				const hausses = [];
+				$('#retraitHausses tbody tr a').each(function () {
+					const href = $(this).attr('href');
+					hausses.push(href.substring(href.lastIndexOf('/') + 1));
+				});
+				const requestData = {hausses: hausses};
+				requestData[_csrf_param_name] = _csrf_token;
+				$.post(urlRucheOdreHause + rucheId,
 					requestData).done(function (data) {
-						if(data !== "OK") {
-							alert( data );
+						if (data !== 'OK') {
+							alert(data);
 						}
+					});
 			});
+			new DataTable('#ajoutHausses');
 		});
-		new DataTable('#ajoutHausses');
-	});
-</script>
+	</script>
 </head>
+
 <body>
 	<nav th:replace="navbar::navbar"></nav>
 	<br />
@@ -51,14 +52,11 @@
 			<div class="col">
 				<h1 class="item">
 					<th:block th:text="#{ajoutretraithausses}"></th:block>
-					<a th:href="@{'/ruche/'+${ruche.id}}"
-						th:text="#{ruche} + ' ' + ${ruche.nom}"></a>
+					<a th:href="@{'/ruche/'+${ruche.id}}" th:text="#{ruche} + ' ' + ${ruche.nom}"></a>
 				</h1>
 			</div>
 			<div class="col">
-				<a
-					th:href="@{#{urldoc}+'3802_3476563104'}"
-					class="bi-book" th:title="#{Doc}" target="_blank"
+				<a th:href="@{#{urldoc}+'3802_3476563104'}" class="bi-book" th:title="#{Doc}" target="_blank"
 					aria-hidden="true"></a>
 			</div>
 		</div>
@@ -77,8 +75,8 @@
 				<tr th:each="hausseRuche : ${haussesRuche}">
 					<td th:text="${hausseRuche.ordreSurRuche}"></td>
 					<td><a data-bs-toggle="tooltip" th:title="#{retirerhausse}"
-						th:href="@{'/evenement/ruche/hausse/retrait/'+${ruche.id}+'/'+${hausseRuche.id}}"
-						th:text="${hausseRuche.nom}"></a></td>
+							th:href="@{'/evenement/ruche/hausse/retrait/'+${ruche.id}+'/'+${hausseRuche.id}}"
+							th:text="${hausseRuche.nom}"></a></td>
 				</tr>
 			</tbody>
 		</table>
@@ -94,8 +92,8 @@
 			<tbody>
 				<tr th:each="hausse : ${haussesRucheAjout}">
 					<td><a data-bs-toggle="tooltip" th:title="#{ajouterhausse}"
-						th:href="@{'/evenement/ruche/hausse/ajout/'+${ruche.id}+'/'+${hausse.id}}"
-						th:text="${hausse.nom}"></a></td>
+							th:href="@{'/evenement/ruche/hausse/ajout/'+${ruche.id}+'/'+${hausse.id}}"
+							th:text="${hausse.nom}"></a></td>
 					<td th:text="${hausse.ruche?.nom}"></td>
 				</tr>
 			</tbody>
@@ -103,4 +101,5 @@
 	</div>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
