--- a/src/main/resources/templates/ruche/rucheForm.html
+++ b/src/main/resources/templates/ruche/rucheForm.html
@@ -8,24 +8,14 @@
 		const rucheNoms = /*[[${rucheNoms}]]*/null;
 		const nomexiste = /*[[#{nomexiste}]]*/null;
 		document.addEventListener('DOMContentLoaded', () => {
-			$("#dateAcquisition").datetimepicker(
+			$('#dateAcquisition').datetimepicker(
 				{timepicker: false, format: 'Y-m-d'});
 			$.datetimepicker.setLocale(window.navigator.language.substring(0, 2));
 			document.getElementById('nom').focus();
-			jQuery.validator.addMethod("nomExiste", function (value) {
-				return $.inArray(value, rucheNoms) == -1;
+			jQuery.validator.addMethod('nomExiste', function (value) {
+				return $.inArray(value, rucheNoms) === -1;
 			}, nomexiste);
-			if ((window.navigator.language == 'fr') || (window.navigator.language.indexOf('fr') != -1)) {
-				$.datepicker.setDefaults($.datepicker.regional['fr']);
-			} else {
-				$.datepicker.setDefaults($.datepicker.regional['en']);
-			}
-			$.datepicker.setDefaults({
-				dateFormat: 'yy-mm-dd',
-				changeYear: true
-			});
-			$("#dateAcquisition").datepicker();
-			$("#rucheForm").validate({
+			$('#rucheForm').validate({
 				errorClass: 'erreur-form',
 				errorPlacement: function (error, element) {
 					error.insertBefore(element.closest('div'));
